# keys_values

./: .gitignore  CHANGELOG.md  README.md  build_ext.py  pyproject.toml
.github/workflows/: release-drafter.yml
ai_dev/: create_result_table.md  trl_integration.md
examples/: trl_grpo_demo.ipynb
keys_values/: __main__.py  fused_rmsnorm.py  fused_rope.py  fused_swiglu.py  logprobs.py  long_context.py  parser_config.py  pos_encoding.py  utils.py
keys_values/attention/: flashinfer_wrapper.py  sdpa_wrapper.py
keys_values/data/: __init__.py  base.py  constants.py  dataloader.py  evaluation.py  helmet.py  longbench_v2.py  module.py  sequence_classification.py  sft_dataset.py  trainstate.py
keys_values/evaluation/: evaluator.py  metrics.py  tasks.py
keys_values/finetune/: args.py  grpo.py  grpo_loop.py  grpo_loss.py  longcontext_eval.py  longcontext_eval_ext.py  longcontext_full.py  resume_state.py  utils.py
keys_values/generate/: base.py  trl_rollout.py
keys_values/kvcache/: factory.py
keys_values/kvcache/gradient/: accumulate.py  annotation.py  checkpoints.py  inference_replay.py
keys_values/scripts/: cleanup_evaluation.py  cleanup_gen_samples.py  collect_eval_results.py  collect_gen_samples.py  create_result_table.py  dataset_token_counts.py  hf_lora_to_litgpt_workflow.md  merge_qwen3_lora.py  remove_files_from_checkpoints.py
keys_values/scripts/convert_lora_to_litgpt/: convert_lora_to_litgpt.sh  (+3 more)
test/: test_logprobs.py
test/attention/: test_flashinfer_wrapper.py
test/finetune/: test_grpo_loop.py
test/generate/: test_trl_rollout.py
(+4 files in other folders)
